Checkin binaries for Linux & macOS

--- a/project.json
+++ b/project.json
@@ -5,14 +5,14 @@
         "description": "Bake port of antlr4 c++ library",
         "author": "Mike Lischke",
         "version": "4.7.1",
-        "language": "c",
+        "language": null,
         "c4cpp": true,
         "include": [
-            "include", 
-            "include/atn", 
-            "include/dfa", 
-            "include/misc", 
-            "include/support", 
+            "include",
+            "include/atn",
+            "include/dfa",
+            "include/misc",
+            "include/support",
             "include/tree",
             "include/tree/xpath",
             "include/tree/pattern"
